changed templates for archive and single product

--- a/src/scss/common/vars.scss
+++ b/src/scss/common/vars.scss
@@ -17,7 +17,7 @@ $ec-margin-xxxl: 40px;
 
 // transitions, shadows
 $ec-shadow-1: 0 1px 24px 1px rgba($black-hole, 0.14);
-$ec-shadow-2: 0 0 4px 2px rgba($black-hole, 0.14);
+$ec-shadow-2: 0 2px 2px rgba(0, 0, 0, 0.25);
 $ec-hover-transition: .2s ease;
 $ec-focus-transition: .1s ease-in-out;
 $ec-active-scale: 0.95;
