- update single product template: added slider, lightbox

--- a/src/scss/common/colors.scss
+++ b/src/scss/common/colors.scss
@@ -5,7 +5,8 @@ $black-hole: #000000;
 $ivory: #ECD5BB;
 $fog-sky: #6a97de;
 $snow: #ffffff;
-$cloudly: #F2F2F2;
+$low: #F2F2F2;
+$cloudly: #ced4da;
 $smoke: #9a9a9a;
 $darker: #343434;
 $deep-blue: #22223E;
