--- a/src/scss/components/shop.scss
+++ b/src/scss/components/shop.scss
@@ -106,7 +106,12 @@
         align-items: center;
 
         .star-rating {
-          margin-right: 4px;
+          margin: 0 4px 0 0 !important;
+          float: none;
+        }
+
+        .star-count {
+          line-height: 1;
         }
       }
     }
