--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "common/colors";
+@import "common/vars";
 
 //vendors
 @import "../../node_modules/bootstrap/scss/functions";
@@ -14,6 +15,7 @@ $theme-colors: (
 $input-height: calc(3rem + 2px);
 $input-padding-y: 0.8rem;
 $headings-font-weight: 700;
+$btn-border-radius: $ec-border-radius;
 
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
@@ -59,13 +61,18 @@ url("../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff?08efbba7
 
 //plugins
 @import "~@glidejs/glide/dist/css/glide.core.min.css";
+@import "../../node_modules/swiper/swiper-bundle.min.css";
 @import "~bootstrap-select/sass/bootstrap-select";
 
 @import "custom/bootstrap/buttons";
 @import "custom/bootstrap/dropdown";
 @import "custom/bootstrap/modal";
+@import "custom/bootstrap/input-group";
+@import "custom/bootstrap-input-spinner/bootstrap-input-spiner";
 
 @import "custom/select2/select2";
+
+@import "custom/swiper/swiper";
 
 .bi {
   font-size: 1rem;
@@ -94,5 +101,5 @@ body {
   font-size: 14px;
   box-sizing: border-box;
   font-family: 'PT Sans', 'Roboto', sans-serif;
-  background-color: $cloudly;
+  background-color: $low;
 }
