--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -6,8 +6,12 @@
   box-shadow: $ec-header-box-shadow;
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: 1024;
   background-color: $snow;
+  height: $ec-header-height;
+  display: flex;
+  align-items: center;
+
   &__menu {
     &-toggler {
       display: flex;
@@ -47,5 +51,20 @@
     justify-content: center;
     border-radius: 50%;
     line-height: 1;
+  }
+
+  &__toolbar {
+    display: flex;
+    align-items: center;
+
+    &-item {
+      &:not(:last-child) {
+        margin-right: $ec-margin-l;
+      }
+    }
+
+    &-link {
+      padding: $navbar-nav-link-padding-x $navbar-nav-link-padding-x;
+    }
   }
 }
