--- a/src/scss/custom/select2/select2.scss
+++ b/src/scss/custom/select2/select2.scss
@@ -1,6 +1,6 @@
 select.form-control + .select2 {
   .select2 {
-    &-selection--multiple {
+    &-selection--multiple, &-selection--single {
       height: $input-height;
       border-radius: $input-border-radius;
       border: $input-border-width solid $input-border-color;
