--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -1,11 +1,4 @@
 .ec-product {
-  &__wrapper {
-    background-color: $snow;
-    padding: $ec-padding-xl;
-    box-shadow: $ec-shadow-2;
-    margin-bottom: $ec-margin-xxl;
-    border-radius: $ec-border-radius;
-  }
 }
 
 .ec-product-reviews {
@@ -62,6 +55,16 @@
             }
           }
         }
+      }
+    }
+  }
+
+  &__empty {
+    &-icon {
+      text-align: center;
+
+      i {
+        font-size: 42px;
       }
     }
   }
