--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -12,6 +12,11 @@
   display: flex;
   align-items: center;
 
+  &__logo {
+    display: flex;
+    justify-content: center;
+  }
+
   &__menu {
     &-toggler {
       display: flex;
@@ -54,7 +59,7 @@
   }
 
   &__toolbar {
-    display: flex;
+    display: none;
     align-items: center;
 
     &-item {
@@ -65,6 +70,10 @@
 
     &-link {
       padding: $navbar-nav-link-padding-x $navbar-nav-link-padding-x;
+    }
+
+    @media screen and (min-width: 768px) {
+      display: flex;
     }
   }
 }
