--- a/src/scss/components/shop.scss
+++ b/src/scss/components/shop.scss
@@ -64,6 +64,10 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+
+      @media screen and (max-width: 991px) {
+
+      }
     }
 
     &._list &-bottom {
