--- a/src/scss/page/header.scss
+++ b/src/scss/page/header.scss
@@ -1,6 +1,6 @@
 @import "../common/vars";
-@import "../../node_modules/bootstrap/scss/mixins";
-@import "../../node_modules/bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/variables";
 
 
 .ec-header {
