--- a/src/scss/components/shop.scss
+++ b/src/scss/components/shop.scss
@@ -15,8 +15,16 @@
     display: flex;
     justify-content: flex-end;
 
+    .btn {
+      display: inline-flex;
+    }
+
     &-btn:not(:last-child) {
       margin-right: $ec-margin-s;
+    }
+
+    @media (max-width: 769px) {
+      justify-content: flex-start;
     }
   }
 
@@ -27,6 +35,8 @@
     border-radius: $ec-border-radius;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    position: relative;
 
     &._list {
       flex-direction: row;
@@ -34,6 +44,15 @@
 
     &-item {
       margin: var(--ec-product-item-margin, 0 0 $ec-margin-s);
+    }
+
+    &-title {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      overflow-wrap: break-word;
     }
 
     &-link {
@@ -67,6 +86,19 @@
 
       @media screen and (max-width: 991px) {
 
+      }
+
+      @media (max-width: 550px) {
+        flex-direction: column;
+        align-items: flex-start;
+
+        .ec-shop__product-price {
+          margin-bottom: $ec-gutter;
+        }
+
+        .btn {
+          width: 100%;
+        }
       }
     }
 
@@ -152,6 +184,51 @@
         flex-direction: column;
         align-items: flex-end;
         text-align: right;
+      }
+    }
+  }
+}
+
+.product._bg {
+  .ec-shop {
+    &__product {
+      --ec-shop-product-padding: 0;
+
+      &-item {
+        --ec-product-item-margin: 0;
+      }
+
+      &-thumbnail {
+        z-index: 2;
+        height: 400px;
+
+        img {
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          background-color: rgba(0,0,0,0.3);
+          z-index: 1;
+          border-radius: $ec-border-radius;
+        }
+      }
+
+      &-link-content {
+        position: absolute;
+        bottom: 0;
+        padding: $ec-padding-xxl;
+        z-index: 2;
       }
     }
   }
