--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,8 +71,8 @@ $enable-caret: false;
 @import "~bootstrap/scss/print";
 
 
-$bootstrap-icons-font-src: url("../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff2?08efbba7c53d8c5413793eecb19b20bb") format("woff2"),
-url("../../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff?08efbba7c53d8c5413793eecb19b20bb") format("woff") !default;
+$bootstrap-icons-font-src: url("../../assets/fonts/bootstrap-icons.woff2") format("woff2"),
+url("../../assets/fonts/bootstrap-icons.woff") format("woff") !default;
 
 @import "node_modules/bootstrap-icons/font/bootstrap-icons.scss";
 
